# demo-vanta-lms

./: .env.example  .gitignore  .mcp.json  nx.json  package.json  pyproject.toml  tsconfig.base.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: build.md  cancel.md  pm.md  retry.md  status.md
.github/workflows/: sync-clickup-on-merge.yml
.mcp/: clickup-fields.json  figma-config.json  user-mapping.json
.nx/workspace-data/: file-map.json  nx_files.nxt  project-graph.json
.nx/workspace-data/d/: server-process.json
agents/: __init__.py  __main__.py
agents/design/: SKILL.md
agents/retrospect/: SKILL.md
agents/shared/: TOOL-BUDGET.md  dashboard-regions.json  figma_lookup.py  figma_traverse.py  gemini.py  icon_audit_v2.py  multi-model-strategy.md  pixelmatch.py  playwright_screenshot.py  retrospect.py
agents/shared/hooks/: audit_logger.py  bash_guard.py  github_guard.py  postgres_guard.py
agents/visual-diff/: SKILL.md
apps/api/: project.json
apps/api/alembic/: env.py
apps/api/migrations/: 001_add_role_to_users.sql
apps/api/src/: config.py  db.py  main.py
apps/web/: index.html  package.json  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css
docs/: agentic-flow.md  generate-diagram.py
libs/api-client/: package.json  project.json  tsconfig.json
libs/api-client/src/: client.ts  index.ts
libs/shared-types/: package.json  project.json
libs/shared-types/src/: index.ts  types.ts
libs/ui/: package.json  project.json  tsconfig.json
scripts/: setup_clickup.py
(+32 files in other folders)
